# embedded-sql-tester

./: Cargo.toml  Readme.md  example.out  src.out
src/: colors.rs  db_output.rs  main.rs  more_sql_tests.rs  runner.rs  test_parser.rs  test_runner.rs
