[package]
name = "test-embeded-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
atty = "0.2.14"
bytecount = "0.6.2"
comfy-table = "5.0.1"
clap = { version = "3", features = ["derive", "wrap_help"] }
colored = "2.0.0"
futures = "0.3"
pulldown-cmark = "0.8.0"
rayon = "1.5"
uuid = { version = "0.8", features = ["v4"] }
ignore = "0.4.18"
nix = { version = "0.24", features = ["signal"], default-features = false }
once_cell = "1.12.0"
tempfile = "3"
termcolor = "1"
tokio = { version = "1.18.2", features = ["full"] }
tokio-postgres = "0.7.6"
xshell = "0.2"

[dev-dependencies]
pretty_assertions = "1.2.1"
